--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "production": "npm install --only=production",
     "test": "ava",
     "watcher": "nodemon",
     "start": "npm run watcher"
@@ -11,13 +12,14 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "bluebird": "^3.5.0",
+    "bcrypt": "^1.0.3",
     "body-parser": "^1.18.2",
     "conekta": "^3.2.0",
     "express": "^4.15.4",
     "mongoose": "^4.11.12"
   },
   "devDependencies": {
+    "bluebird": "^3.5.0",
     "ava": "^0.22.0",
     "morgan": "^1.8.2",
     "nodemon": "^1.12.1",
