--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "body-parser": "^1.18.2",
     "conekta": "^3.2.0",
     "express": "^4.15.4",
+    "ionicons": "^3.0.0",
     "mongoose": "^4.11.12",
     "react": "^16.0.0",
     "react-dom": "^16.0.0"
@@ -43,6 +44,7 @@
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.1",
     "supertest": "^3.0.0",
+    "url-loader": "^0.6.2",
     "webpack": "^3.8.1"
   }
 }
